commiting more changes

--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "lib":"lib",
+    "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose test/*"
   },
   "repository": {
     "type": "git",
@@ -17,7 +21,9 @@
   },
   "homepage": "https://github.com/DavRDub/Team-Profile-Generator#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
     "inquirer": "^8.1.0",
-    "jest": "^27.0.4"
+    "jest": "^27.0.4",
+    "rx": "^4.1.0"
   }
 }
